# Project_Axiom_Rift

./: .gitattributes  .gitignore  AGENTS.md  FOUNDATION_BUILD_CHECKLIST.md  OPERATING_DIRECTION.md  README.md  V2_OPERATING_DIRECTION_DRAFT.md  pyproject.toml
.githooks/: commit-msg
artifacts/: README.md
configs/: README.md  market.yaml  market_calendar.yaml  paths.yaml  runtime.yaml
contracts/: README.md  artifact_lineage.yaml  base_contract.md  campaign_lifecycle.yaml  claims.yaml  data.yaml  discovery_policy.yaml  evaluation_contract.md  evidence.yaml  experiment_constants_contract.md  experiment_direction_contract.md  feature_data_contract.md  features.yaml  goal_operation_policy.yaml  kpi_ledger_contract.md  operations.yaml  project_goal_contract.md  runtime.yaml  science.yaml  work_unit_creation.yaml  work_unit_preflight.yaml
data/: README.md
foundation/: README.md  data_exposure.yaml  environment.yaml  market.yaml  origin.yaml  prior_scientific_memory.yaml
records/: STUDY_CLOSE_DELIVERY_CHECKPOINT.json  STUDY_CLOSE_DELIVERY_REPAIR.json  STUDY_KPI.md  journal.jsonl
registries/: alpha_run_ledger.csv  artifact_registry.csv  bootstrap_vendor_sources.yaml  claim_state.yaml  clean_periods.yaml  decision_cursor.yaml  decision_registry.yaml  reentry.yaml  rolling_windows.yaml  run_registry.jsonl  source_inventory.json  source_path_decision.yaml  template_registry.yaml  work_unit_registry.yaml
scripts/: activate_atomic_scientific_proof_enforcement_v1.py  activate_prospective_pair_scientific_protocol_v1.py  apply_claim_scoped_diagnosis_corrections.py  install_git_hooks.py  (+48 more)
(+4066 files in other folders)
