[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-rift"
version = "0.1.0"
description = "Local operating kernel for FPMarkets US100 M5 research"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
axiom = "axiom_rift.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
