[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-rift"
version = "0.1.0"
description = "Local operating kernel for FPMarkets US100 M5 research"
requires-python = ">=3.11"
dependencies = [
  "numpy==2.3.4",
  "pandas==2.3.3",
  "PyYAML>=6.0",
  "scikit-learn==1.8.0",
  "scipy==1.16.3",
]

[project.optional-dependencies]
test = [
  "pytest>=9,<10",
]

[project.scripts]
axiom = "axiom_rift.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
